<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">챌린멍스</string>
    <string name="title_shelter_auth">후원처이신가요?</string>
    <string name="content_shelter_join">회원가입</string>
    <string name="content_shelter_login">로그인</string>
    <string name="title_tab_challenge">챌린지</string>
    <string name="title_tab_donate">기부</string>
    <string name="title_tab_home">홈</string>
    <string name="title_tab_map">정보</string>
    <string name="title_tab_my_page">마이페이지</string>
    <string name="image_menu">하단 메뉴의 이미지입니다.</string>
    <string name="content_heart_temperature_amount">%d °C</string>
    <string name="image_default_profile">image_default_profile_icon</string>
    <string name="title_donate_history">기부내역</string>
    <string name="title_my_challenge">내 챌린지</string>
    <string name="content_total_contribution">누적 기부액 %s KLAY</string>
    <string name="content_question_heart_temperature">당신의 마음의 온도는?</string>
    <string name="image_heart_temperature">image_heart_temperature_icon</string>
    <string name="image_donate_history">image_donate_history_icon</string>
    <string name="image_my_challenge">image_my_challenge_icon</string>
    <string name="image_my_campaign">image_my_campaign_icon</string>
    <string name="image_cheer_campaign">image_cheer_campaign_icon</string>
    <string name="title_my_wallet">내 지갑</string>
    <string name="title_donate_bank">기부 저금통</string>
    <string name="content_logout">로그아웃</string>
    <string name="title_my_campaign">내가 기부한 캠페인</string>
    <string name="content_unit">KLAY</string>
    <string name="title_cheer_campaign">내가 응원한 기부 캠페인</string>
    <string name="image_logo">서비스 로고입니다.</string>
    <string name="content_splash">기부를 재미있게!</string>
    <string name="title_current_balance">현재 잔액</string>
    <string name="image_klay">KLAY_icon</string>
    <string name="content_address_copy"><u>주소 복사</u></string>
    <string name="content_challenge_participation">챌린지 참여</string>
    <string name="image_bank_statement_item_icon">image_bank_statement_item_icon</string>
    <string name="image_back">image_back_icon</string>
    <string name="content_bank_statement_total">%s KLAY</string>
    <string name="content_bank_statement_time">%d:%d</string>
    <string name="title_edit_profile">프로필 수정</string>
    <string name="content_save">저장</string>
    <string name="content_withdrawal">회원탈퇴</string>
    <string name="content_nickname">닉네임</string>
    <string name="profile_edit">profile_edit_icon</string>
    <string name="profile_image">profile_image</string>
    <string name="title_password_change">비밀번호 변경</string>
    <string name="title_withdrawal_wallet_address">출금받을 지갑 주소</string>
    <string name="content_change">변경</string>
    <string name="content_cancel">취소</string>
    <string name="content_new_password_check">새로운 비밀번호 확인</string>
    <string name="content_new_password">새로운 비밀번호</string>
    <string name="content_current_password">현재 비밀번호</string>
    <string name="title_donation_certificate">기부증서</string>
    <string name="content_donator">기부자</string>
    <string name="content_donation">기부액</string>
    <string name="content_shelter">기부처</string>
    <string name="content_donation_date">기부 날짜</string>
    <string name="content_donation_possible_amount">기부 가능 금액</string>
    <string name="content_donate">기부하기</string>
    <string name="image_camera">카메라 아이콘입니다.</string>
    <string name="image_gallery">갤러리 아이콘입니다.</string>
    <string name="image_gps">gps 아이콘입니다.</string>
    <string name="title_permission">접근 권한 안내</string>
    <string name="content_permission_main">챌린멍스 서비스 사용을 위해\n아래의 접근 권한 동의가 필요합니다.</string>
    <string name="content_permission_sub">필수가 아닌 권한은 승인하지 않아도 서비스 이용은 가능하지만 해당 기능을 사용하실 수 없으며, 해당 기능을 사용할 때 다시 접근 권한에 대한 동의 요청을 받게됩니다.</string>
    <string name="title_permission_camera">카메라 (선택)</string>
    <string name="content_permission_camera">일반 챌린지 인증 사진 촬영을 위한 접근</string>
    <string name="title_permission_gallery">갤러리 (선택)</string>
    <string name="content_permission_gallery">일반 챌린지 인증 사진 업로드를 위한 접근</string>
    <string name="title_permission_gps">위치 정보 (필수)</string>
    <string name="content_permission_gps">특별 챌린지(판넬뒤집기, 보물찾기)의 목록 조회와 특별챌린지 이용, 그리고 주변 상권 조회를 위한 접근</string>
    <string name="content_check">확인</string>
    <string name="content_donation_number">기부건수</string>
    <string name="content_donation_number_unit">건</string>
    <string name="content_totality_donation">총 기부액</string>
    <string name="content_year">%s년</string>
    <string name="title_total_contribution">누적 기부액</string>
    <string name="content_close">닫기</string>
    <string name="title_info">정보</string>
    <string name="content_walk_start">산책 시작하기</string>
    <string name="content_walk_end">산책 끝내기</string>
    <string name="content_panel_rank">%d등 (%d개)</string>
    <string name="content_gps_off_warning">위치 서비스가 꺼져 있어, 현재 위치를 확인할 수 없습니다.</string>
    <string name="default_profile_url" tools:ignore="TypographyDashes">https://kr.object.ncloudstorage.com/challenmungs-storage/user/e39faf10-48c3-4deb-99dc-0d12df102499ic_profile.png</string>
    <string name="content_location_permission_warning_message">챌린지에 참여하려면 위치 권한이 필요합니다. 권한을 허용해 주세요.</string>
    <string name="content_member_name">닉네임</string>
    <string name="title_member_onboarding">회원정보 입력</string>
    <string name="content_campaign_amount">%d / %d KLAY</string>
    <string name="content_progress">(%d%%)</string>
    <string name="image_heart_icon">image_heart_icon</string>
    <string name="image_campaign_banner">image_banner</string>
    <string name="content_period">%s ~ %s</string>
    <string name="content_treasure">보물</string>
    <string name="content_headcount">%d/%d</string>
    <string name="content_normal">일반</string>
    <string name="content_panel_individual">판넬(개)</string>
    <string name="content_panel_team">판넬(팀)</string>
    <string name="title_title">제목</string>
    <string name="title_date">일정</string>
    <string name="content_enter_title">제목을 입력해주세요.</string>
    <string name="content_choice_date">일정을 선택해주세요.</string>
    <string name="title_max_headcount">최대인원</string>
    <string name="title_type">유형</string>
    <string name="image_calendar">image_calendar_button</string>
    <string name="content_individual">개인전</string>
    <string name="content_team">팀전</string>
    <string name="content_participation_money">참가비</string>
    <string name="content_do_set">설정하기</string>
    <string name="content_not_set">미설정</string>
    <string name="content_set">설정</string>
    <string name="title_play_area_setting">경기구역 설정</string>
    <string name="content_play_area_setting_message">경기구역을 설정해주세요.</string>
    <string name="image_reset">image_reset_button_icon</string>
    <string name="title_panel_play_create">판넬 뒤집기 만들기</string>
    <string name="content_create_check_message">챌린지 생성 후 수정이 불가능합니다. 생성하시겠습까?</string>
    <string name="title_select_date">챌린지 기간을 선택해주세요.</string>
    <string name="content_get_my_location_warning_message">위치권한이 없으므로 기본 위치로 이동합니다. 위치 권한을 허용해주세요.</string>
    <string name="content_create_failed">챌린지 생성에 실패하였습니다.\n 조금 후에 다시 시도해주세요.</string>
    <string name="content_create_success">챌린지가 생성되었습니다!</string>
    <string name="title_ongoing">진행</string>
    <string name="title_wait">대기</string>
    <string name="title_finish">완료</string>
    <string name="title_choose_team">팀을 선택해주세요.</string>
    <string name="content_withdrawal_comment">이별인가요? 너무 아쉬워요..</string>
    <string name="content_create_challenge_comment">챌린지 생성 후 수정이 불가능합니다.\n생성하시겠습까?</string>
    <string name="image_category">image_category_icon</string>
    <string name="content_category">종목</string>
    <string name="content_panel_game">판넬 뒤집기</string>
    <string name="image_period">image_period_icon</string>
    <string name="image_participation_money">image_participation_money_icon</string>
    <string name="image_tag">image_tag_icon</string>
    <string name="image_play_area">image_play_area_icon</string>
    <string name="content_play_area">경기구역</string>
    <string name="content_current_participants">현재 참가 인원 (%d/%d)</string>
    <string name="image_participants">image_participants_icon</string>
    <string name="image_calendar_icon">image_calendar_icon</string>
    <string name="content_participate">참가하기</string>
    <string name="title_get_result">보상획득</string>
    <string name="content_result_gain_comment">획득한 코인은 기부 저금통에 적립됩니다!</string>
    <string name="title_final_rank">최종순위</string>
    <string name="content_panel_count">뒤집은 판넬 수 : %d개</string>
    <string name="content_rank">%d위</string>
    <string name="image_crown">image_crown_icon</string>
    <string name="content_result_gain_addition">(+%d)</string>
    <string name="image_current_rank">image_current_rank_icon</string>
    <string name="content_current_rank">현재 순위</string>
    <string name="content_total_fee">모인 참가비</string>
    <string name="content_my_fee">나의 참가비</string>
    <string name="pharse_catch_pharse">재미있게 기부하자!</string>
    <string name="pharse_user_total_donation">전체 이용자 기부총액</string>
    <string name="pharse_ongoing_my_challenge">진행 중인 내 챌린지</string>
    <string name="pharse_show_all_my_challenge">+전체보기</string>
    <string name="pharse_only_tomorrow_my_challenge">내일 시작하는 챌린지</string>
    <string name="pharse_show_more">+더보기</string>
    <string name="pharse_recently_added_campaign">최근 추가된 모금</string>
    <string name="pharse_no_ongoing_challenge">진행중인 챌린지가 없습니다</string>
    <string name="pharse_no_tomorrow_challenge">내일 시작하는 챌린지가 없습니다</string>
    <string name="pharse_no_recent_campaign">최근 7일 내에 생성된\n모금이 없습니다</string>
    <string-array name="challenge_category">
        <item>전체</item>
        <item>일반</item>
        <item>판넬 뒤집기</item>
        <item>보물찾기</item>
    </string-array>
    <string name="content_challenge_help">챌린지 설명을 볼 수 있는 버튼입니다.</string>
    <string name="content_search_challenge_hint">검색할 챌린지 이름을 입력하세요.</string>
    <string name="content_fab_main">메인 플로팅 액션 버튼입니다.</string>
    <string name="content_filter_amount">누적금액순</string>
    <string name="content_filter_cheer_up">응원순</string>
    <string name="content_filter_recent">최신순</string>
    <string name="image_filter">필터 버튼의 아이콘입니다.</string>
    <string name="image_sort_option">오름차순인지 내림차순인지 나타내는 이미지입니다</string>
    <string name="content_search_campaign_hint">검색할 캠페인 이름을 입력하세요.</string>
    <string name="image_campaign_main">기부 캠페인의 메인 이미지 입니다.</string>
    <string name="image_share">공유 버튼입니다.</string>
    <string name="image_cheer_up">응원받은 수 이미지입니다.</string>
    <string name="content_cheer_up">응원하기</string>
    <string name="image_member_profile">사용자의 프로필 이미지입니다.</string>
    <string name="title_usage_history">사용내역</string>
    <string name="content_view_receipt">영수증 확인 ></string>
    <string name="image_receipt">영수증 인증 사진입니다.</string>
    <string name="content_my_piggy_bank">내 기부 저금통</string>
    <string name="content_from">에서</string>
    <string name="content_to">(으)로</string>
    <string name="content_donate_amount">\?얼마를 보낼까요</string>
    <string name="content_input">입력</string>
    <string name="title_campaign_comment">응원 댓글 쓰기</string>
    <string name="content_character_limit_init">0</string>
    <string name="content_slash">/</string>
    <string name="content_character_limit">300</string>
    <string name="content_campaign_comment_hint">따듯한 한마디를 남겨주세요.</string>
    <string name="content_about_fee">수수료는 챌린멍스가 대신 부담합니다.</string>
    <string name="content_balance_piggy_bank">잔액 %,d</string>
    <string name="content_shelter_id_hint">아이디</string>
    <string name="content_password_hint">비밀번호</string>
    <string name="content_password_check_hint">비밀번호 확인</string>
    <string name="content_shelter_name_hint">기부처 이름</string>
    <string name="content_invite_code_hint">초대 코드</string>
    <string name="content_join">회원가입</string>
    <string name="content_search_hint">검색할 챌린지 이름을 입력하세요.</string>
    <string name="pharse_select_region">지역 선택</string>
</resources>